--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <div class="container">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</div>
+      <div class="container">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;</div>
       <div class="footer">
         <div class="container footer-content">
           <p>Copyright &copy; 2015 GANDHI ASSOCIATES</p>
