--- a/index.html
+++ b/index.html
@@ -75,11 +75,20 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
@@ -94,36 +103,19 @@
               <h2>Welcome to our company</h2>
               <p>We introduce ourselves as an Advisory firm with many decades 
                 of experience in the Securities Industry and Investment Consultants 
-                in Shares and are dealing in Non Traded / Unlisted / Unquoted Shares. 
-                We are extremely transparent in our dealings and all valuations 
+                in Shares and are dealing in Non Traded / Unlisted / Unquoted</p>
+              <p>We are extremely transparent in our dealings and all valuations
                 are carried out after due diligence by our experienced team. We have 
                 been able to provide share holders of company’s very attractive 
                 prices of shares which are not quoted and traded in stock markets 
                 and which people find very difficult to off load.</p>
-              <p>“As a group, we are committed to strategic business 
-                development in every sector that we operate in consultancy of 
-                Unquoted / Unlisted Shares. We would like to be one of the Most 
-                Respected Companies in India, recognised for challenging 
-                conventions and Delivering on Our Promises.“</p>
-              <h3>UNQUOTED SHARES</h3>
-              <p>Unquoted Shares also known as Unlisted Shares, these are 
-                shares in companies that are no longer quoted or traded on any stock 
-                exchange. Shares in these companies are traded through off-market 
-                transactions and volumes in such shares are very low. As unquoted 
-                securities are not traded on nor regulated by a recognised stock 
-                exchange, prices can be volatile.</p>
-              <p>Out of more than 10,000 companies in India that have raised 
-                capital and debt from the market, hardly about 50 % are traded on the 
-                stock exchanges presently. So when it comes to small companies the 
-                Indian Stock Markets are not quite liquid.</p>
-              <p>Here where we decided to step in to provide a unique exit route 
-                to those who are stuck with large quantities of securities that they 
-                cannot sell.</p>
-                    </div>
+              <p>Here we provide a unique exit route to those who are stuck with 
+                large quantities of securities that they cannot sell.</p>
+            </div>
           <!-- Hidden Collumn -->
             <div class="news mobile-view col-md-3">
               <h2>We are buying..</h2>
-              <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
+              <marquee class="marquee-text" behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
                 <ul>
                   <li>Assam Petrochemicals Ltd.</li>
                   <li>Bharti Telecom Ltd.</li>
@@ -131,11 +123,20 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
