--- a/mission.html
+++ b/mission.html
@@ -67,7 +67,7 @@
           <div class="main-content">
             <div class="news large-screen col-md-3">
               <h2>We are buying..</h2>
-              <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
+              <marquee class="marquee-text" behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
                 <ul>
                   <li>Assam Petrochemicals Ltd.</li>
                   <li>Bharti Telecom Ltd.</li>
@@ -75,14 +75,25 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
+                  <li>Xerox India Ltd.</li>
+                  <li>Yamuna Syndicate Ltd.</li>
                 </ul>
               </marquee>
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
@@ -90,10 +101,10 @@
             <div class="company-info col-md-9">
               <img src="img/mission.jpg" style="width:100%;height:auto;">
               <h2>Our Mission</h2>
-              <p>Our solitary mission is to continually improve our services and 
-              to maintain a high level of excellence, which will meet and exceed the 
-              needs of our current and future clients, thereby enhancing their 
-              values.</p>
+              <p>Our solitary mission is to continually improve our services and
+                to maintain a high level of excellence, which will meet and exceed the 
+                needs of our current and future clients, thereby enhancing their 
+                values.</p>
             <p>We will be glad to be of Service to you if you wish to sell any 
               Physical, Unquoted or Delisted Shares. Kindly send us your list of 
               Unsalable, Unquoted, Unlisted Shares with Scrip Name, Quantity and 
@@ -104,7 +115,7 @@
           <!-- Hidden Collumn -->
             <div class="news mobile-view col-md-3">
               <h2>We are buying..</h2>
-              <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
+              <marquee class="marquee-text" behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
                 <ul>
                   <li>Assam Petrochemicals Ltd.</li>
                   <li>Bharti Telecom Ltd.</li>
@@ -112,14 +123,25 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
+                  <li>Xerox India Ltd.</li>
+                  <li>Yamuna Syndicate Ltd.</li>
                 </ul>
               </marquee>
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
