--- a/vision.html
+++ b/vision.html
@@ -67,7 +67,7 @@
           <div class="main-content">
             <div class="news large-screen col-md-3">
               <h2>We are buying..</h2>
-              <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
+              <marquee class="marquee-text" behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
                 <ul>
                   <li>Assam Petrochemicals Ltd.</li>
                   <li>Bharti Telecom Ltd.</li>
@@ -75,14 +75,25 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
+                  <li>Xerox India Ltd.</li>
+                  <li>Yamuna Syndicate Ltd.</li>
                 </ul>
               </marquee>
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
@@ -90,12 +101,16 @@
             <div class="company-info col-md-9">
               <img src="img/vision.jpg" style="width:100%;height:auto;">
               <h2>Our Vision</h2>
-              <p>“As a group, We are committed to strategic business development in Unquoted Shares. We would like to be one of the Most Respected Companies in India, recognised for challenging conventions and Delivering on Our Promises.“</p>
-                    </div>
+              <p>“As a group, we are committed to strategic business 
+                development in every sector that we operate in consultancy of 
+                Unquoted / Unlisted Shares. We would like to be one of the Most 
+                Respected Companies in India, recognised for challenging 
+                conventions and Delivering on Our Promises.“</p>
+            </div>
           <!-- Hidden Collumn -->
             <div class="news mobile-view col-md-3">
               <h2>We are buying..</h2>
-              <marquee behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
+              <marquee class="marquee-text" behavior="scroll" direction="up" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="3">
                 <ul>
                   <li>Assam Petrochemicals Ltd.</li>
                   <li>Bharti Telecom Ltd.</li>
@@ -103,14 +118,25 @@
                   <li>Dewas Metal Sections Ltd.</li>
                   <li>Essar Steels Ltd.</li>
                   <li>Farm Enterprises Ltd.</li>
+                  <li>Gujarat NRE Minerals Resources Ltd.</li>
+                  <li>Hindusthan Vidyut Products Ltd.</li>
                   <li>Indian Wood Products Ltd.</li>
                   <li>Jardine Henderson Ltd.</li>
                   <li>KIOCL Ltd.</li>
+                  <li>Lotte India Corporation Ltd.</li>
+                  <li>Mideast Integrated Steels Ltd.</li>
+                  <li>New India Investment Corporation Ltd.</li>
                   <li>Otis Elevator Ltd.</li>
+                  <li>Philips Electronic India Ltd.</li>
+                  <li>Quality Synthetic Industries Ltd.</li>
+                  <li>Rama Raju Surgical Cotton Mill Ltd.</li>
                   <li>Syngenta India Ltd.</li>
+                  <li>Tamilnad Mercantile Bank Ltd.</li>
                   <li>Utkal Soap Products Ltd.</li>
                   <li>Victor Gaskets India Ltd.</li>
                   <li>Wipro Enterprises Ltd.</li>
+                  <li>Xerox India Ltd.</li>
+                  <li>Yamuna Syndicate Ltd.</li>
                 </ul>
               </marquee>
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
