--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="img/logo.png" width="100" height="91">
+              <img src="/img/logo.png" width="100" height="91">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
