--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
         <div class="container">
           <div class="main-content">
             <div class="news list col-md-12">
-              <h2>Currently We are Buying Shares of Following Companies :</h2>
+              <h2>Currently We are buying shares of following companies :</h2>
               <ul>
                 <li>Assam Petrochemicals Ltd.</li>
                 <li>Bharti Telecom Ltd.</li>
