news.html edited

--- a/news.html
+++ b/news.html
@@ -100,6 +100,8 @@
                 <li>Wipro Enterprises Ltd.</li>
                 <li>Xerox India Ltd.</li>
                 <li>Yamuna Syndicate Ltd.</li>
+                <span>and many many more...</span>
+
               </ul>
             </div>
           </div>
