--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Gandhi Associates</title>
+    <title>Welcome to Gandhi Associates</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
               <img src="/img/logo.png" width="100" height="91">
-              <h1>Gandhi Associates</h1>
+              <h1>Welcome to Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
@@ -100,7 +100,7 @@
             </div>
             <div class="company-info col-md-9">
               <img src="img/banner.jpg" style="width:100%;height:auto;">
-              <h2>Welcome to our company</h2>
+              <h2>Welcome to Gandhi Associates</h2>
               <p>We introduce ourselves as an Advisory firm with many decades 
                 of experience in the Securities Industry and Investment Consultants 
                 in Shares and are dealing in Non Traded / Unlisted / Unquoted</p>
