--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
               <img src="/img/logo.png" width="100" height="91">
-              <h1>Welcome to Gandhi Associates</h1>
+              <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
