<img> (Image) tags found without alt attributes issues solved

--- a/contact.html
+++ b/contact.html
@@ -24,17 +24,17 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="img/logo.png" width="100" height="91">
+              <img src="img/logo.png" width="100" height="91" alt="Logo">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
             <ul>
               <li>Follow us :</li>
-              <li class="facebook"><a href="https://www.facebook.com/unquotedshares" target="_blank"><img src="img/fb.png"></a></li>
-              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png"></a></li>
-              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png"></a></li>
-              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png"></a></li>
+              <li class="facebook"><a href="https://www.facebook.com/unquotedshares" target="_blank"><img src="img/fb.png" alt="Facebook"></a></li>
+              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter"></a></li>
+              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google"></a></li>
+              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog"></a></li>
             </ul>
           </div>          
         </div>
@@ -64,7 +64,7 @@
 
       <div class="banner">
         <div class="container">
-          <div class="image"><img src="img/contactus.jpg" style="width:100%;height:auto;"></div>
+          <div class="image"><img src="img/contactus.jpg" alt="ContactUs" style="width:100%;height:auto;"></div>
         </div>
       </div>
 
