--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="/img/logo.png" width="100" height="91">
+              <img src="/img/logo.png" width="100" height="91" alt="Logo">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
             <ul>
               <li>Follow us :</li>
-              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png"></a></li>
-              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png"></a></li>
-              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png"></a></li>
-              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png"></a></li>
+              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png" alt="Facebook"></a></li>
+              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter"></a></li>
+              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google"></a></li>
+              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog"></a></li>
             </ul>
             </ul>
           </div>          
@@ -99,7 +99,7 @@
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
             </div>
             <div class="company-info col-md-9">
-              <img src="img/banner.jpg" style="width:100%;height:auto;">
+              <img src="img/banner.jpg" alt="Banner" style="width:100%;height:auto;">
               <h2>Welcome to Gandhi Associates</h2>
               <p>We introduce ourselves as an Advisory firm with many decades 
                 of experience in the Securities Industry and Investment Consultants 
