--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Contact page for Gandhi Associates">
+    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Welcome to Gandhi Associates::: Contact us</title>
 
     <!-- Bootstrap -->
