alt text in <img> and meta description modified

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Main page for Gandhi Associates website">
+    <meta name="description" content="It is an Advisory firm with many decades of experience in the Securities Industry and Investment Consultants in Shares and are dealing in Non Traded / Unlisted / Unquoted Shares">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Welcome to Gandhi Associates</title>
 
@@ -25,17 +25,17 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="/img/logo.png" width="100" height="91" alt="Logo">
+              <img src="/img/logo.png" width="100" height="91" alt="Gandhi Associates">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
             <ul>
               <li>Follow us :</li>
-              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png" alt="Facebook"></a></li>
-              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter"></a></li>
-              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google"></a></li>
-              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog"></a></li>
+              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png" alt="Facebook of Gandhi Associates"></a></li>
+              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter of Gandhi Associates"></a></li>
+              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google of Gandhi Associates"></a></li>
+              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog of Gandhi Associates"></a></li>
             </ul>
             </ul>
           </div>          
@@ -100,7 +100,7 @@
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
             </div>
             <div class="company-info col-md-9">
-              <img src="img/banner.jpg" alt="Banner" style="width:100%;height:auto;">
+              <img src="img/banner.jpg" alt="Banner of Gandhi Associates" style="width:100%;height:auto;">
               <h2>Welcome to Gandhi Associates</h2>
               <p>We introduce ourselves as an Advisory firm with many decades 
                 of experience in the Securities Industry and Investment Consultants 
