--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Contact page of Gandhi Associates">
+    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Welcome to Gandhi Associates::: Contact us</title>
 
     <!-- Bootstrap -->
@@ -24,17 +25,17 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="img/logo.png" width="100" height="91">
+              <img src="img/logo.png" width="100" height="91" alt="Gandhi Associates">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
             <ul>
               <li>Follow us :</li>
-              <li class="facebook"><a href="https://www.facebook.com/unquotedshares" target="_blank"><img src="img/fb.png"></a></li>
-              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png"></a></li>
-              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png"></a></li>
-              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png"></a></li>
+              <li class="facebook"><a href="https://www.facebook.com/unquotedshares" target="_blank"><img src="img/fb.png" alt="Facebook of Gandhi Associates"></a></li>
+              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter of Gandhi Associates"></a></li>
+              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google of Gandhi Associates"></a></li>
+              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog of Gandhi Associates"></a></li>
             </ul>
           </div>          
         </div>
@@ -64,7 +65,7 @@
 
       <div class="banner">
         <div class="container">
-          <div class="image"><img src="img/contactus.jpg" style="width:100%;height:auto;"></div>
+          <div class="image"><img src="img/contactus.jpg" alt="Contact us of Gandhi Associates" style="width:100%;height:auto;"></div>
         </div>
       </div>
 
@@ -88,7 +89,7 @@
 
             </div>
             <div class="map col-sm-5 col-md-6 col-lg-6">
-              <a href="//www.google.com/url?sa=D&amp;oi=plus&amp;q=https://www.google.com/maps/place/Gandhi%2BAssociates/data%3D!4m2!3m1!1s0x3959ca1898a860a3:0x7f48aea34c554a9f?gl%3DIN%26hl%3Den" target="_blank" class="d-s Gl" tabindex="0" action-type="56"><img alt="Map of the business location" src="img/map.png" width="100%" height="auto" class="Nlc"></a>
+              <a href="//www.google.com/url?sa=D&amp;oi=plus&amp;q=https://www.google.com/maps/place/Gandhi%2BAssociates/data%3D!4m2!3m1!1s0x3959ca1898a860a3:0x7f48aea34c554a9f?gl%3DIN%26hl%3Den" target="_blank" class="d-s Gl" tabindex="0" action-type="56"><img alt="Map for business location of Gandhi Associates" src="img/map.png" width="100%" height="auto" class="Nlc"></a>
             </div>
           </div>
         </div>
