--- a/vision.html
+++ b/vision.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Vision of Gandhi Associates">
+    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Welcome to Gandhi Associates:::Our vision</title>
 
     <!-- Bootstrap -->
@@ -24,17 +25,17 @@
         <div class="container clearfix">
           <div class="logo col-xs-12 col-sm-8 col-md-6">
             <a href="/">
-              <img src="/img/logo.png" width="100" height="91">
+              <img src="/img/logo.png" width="100" height="91" alt="Gandhi Associates">
               <h1>Gandhi Associates</h1>
             </a>
           </div>
           <div class="social-links col-sm-4 col-md-4">
             <ul>
               <li>Follow us :</li>
-              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png"></a></li>
-              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png"></a></li>
-              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png"></a></li>
-              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png"></a></li>
+              <li class="facebook"><a href="https://www.facebook.com/gandhiassociates" target="_blank"><img src="img/fb.png" alt="Facebook of Gandhi Associates"></a></li>
+              <li class="twitter"><a href="https://twitter.com/unquotedshares" target="_blank"><img src="img/twt.png" alt="Twitter of Gandhi Associates"></a></li>
+              <li class="google"><a href="https://plus.google.com/u/0/117056323160138394728" target="_blank"><img src="img/gplus.png" alt="Google of Gandhi Associates"></a></li>
+              <li class="blog"><a href="http://gandhiassociates.blogspot.in/" target="_blank"><img src="img/blog.png" alt="Blog of Gandhi Associates"></a></li>
             </ul>
             </ul>
           </div>          
@@ -99,7 +100,7 @@
               <button class="btn btn-primary"><a href="/news.html">View More</a></button>
             </div>
             <div class="company-info col-md-9">
-              <img src="img/vision.jpg" style="width:100%;height:auto;">
+              <img src="img/vision.jpg" alt="Vision of Gandhi Associates" style="width:100%;height:auto;">
               <h2>Our Vision</h2>
               <p>“As a group, we are committed to strategic business 
                 development in every sector that we operate in consultancy of 
