meta description modified (#5)
* meta description should be >70 characters and <120 characters all page meta description modified

* meta description modified

* title modified

* title modified

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="It is an Advisory firm with many decades of experience in the Securities Industry and Investment Consultants in Shares and are dealing in Non Traded / Unlisted / Unquoted Shares">
+    <meta name="description" content="Gandhi Associates is an advisory firm in the securities industry and investment consultants in shares.">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Welcome to Gandhi Associates</title>
 
