--- a/mission.html
+++ b/mission.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mission of Gandhi Associates">
+    <meta name="description" content="Gandhi Associates's solitary mission is to continually improve our services and to maintain a high level of excellence.">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Welcome to Gandhi Associates::: Our mission</title>
+    <title>Welcome to Gandhi Associates: Our mission</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
