--- a/vision.html
+++ b/vision.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Vision of Gandhi Associates">
+    <meta name="description" content="Gandhi Associates committed to strategic business development in sectors that operate in consultancy of Unquoted Shares.">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Welcome to Gandhi Associates:::Our vision</title>
+    <title>Welcome to Gandhi Associates: Our vision</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
